Ikke lagre adresse på familierelasjoner. Hent adresseinfo fra tps